# solis_control

./: LICENSE  README.md  pyproject.toml  solis_control.py  solis_control_battery_charge.py  solis_control_grid_feed.py  solis_control_power_limit.py  solis_sync_clock.py
.devcontainer/: devcontainer.json
.github/workflows/: ruff.yaml
examples/automations/slow_charge_during_cheap_periods/: README.md  dashboard_markdown_card.yaml  solis_slow_charge_during_cheap_periods.yaml
